# elf

./: CONTRIBUTING.md  README.md  SYNTAX.md  elf-lexer.cc  elf-lexer.h  elf-operation.c  elf-operation.cc  elf-operation.h  elf-parser.c  elf-parser.cc  elf-parser.h  elf-runner.c  elf-runner.cc  elf-runner.h  elf-token.c  elf-token.cc  elf-token.h  elf.c  elf.cc  make-version  meson.build  test-runner.c  test-runner.cc  utils.c  utils.cc  utils.h  x86_64.c  x86_64.cc  x86_64.h
snap/: snapcraft.yaml
tests/: add.elf  assert-false.elf  assert-true.elf  bool-and.elf  bool-or.elf  bool-variable-constant-false.elf  bool-variable-constant-true.elf  bool-variable.elf  bool-xor.elf  function-call-extra-parameter.elf  function-call-extra-parameter.elf.stdout  function-call-missing-parameter.elf  function-call-missing-parameter.elf.stdout  function-call.elf  function-return-bool-constant.elf  function-return-bool-parameter.elf  function-return-uint16-parameter.elf  function-return-uint16.elf  function-return-uint32-constant.elf  function-return-uint32-parameter.elf  function-return-uint64-parameter.elf  function-return-uint64.elf  function-return-uint8-constant.elf  function-return-uint8-parameter.elf  function-return-utf8-parameter.elf  function-return-utf8.elf  if-false-else.elf  if-false.elf  if-true-else.elf  if-true.elf  int16-array-variable-constant.elf  int16-array-variable.elf  int16-variable-array-value.elf  int16-variable-array-value.elf.stdout  int16-variable-comparisons.elf  int16-variable-constant-max.elf  int16-variable-constant-min.elf  int16-variable-int16-value.elf  int16-variable-int32-value.elf  int16-variable-int32-value.elf.stdout  (+185 more)
