project ('elf', [ 'cpp' ],
         version: '0.1',
         default_options : [ 'cpp_std=c++11' ])

version = run_command ('make-version')
elf = executable ('elf',
                  [ 'elf.cc',
                    'elf-operation.cc',
                    'elf-parser.cc',
                    'elf-runner.cc',
                    'elf-token.cc',
                    'x86_64.cc',
                  ],
                  cpp_args: [ '-DVERSION="@0@"'.format (version.stdout ().strip ()) ],
                  install: true)

test_runner = executable ('test-runner',
                          [ 'test-runner.cc',
                          ])

tests = [ 'empty-file',
          'comment',
          'trailing-comment',
          'bool-variable',
          'bool-variable-constant-false',
          'bool-variable-constant-true',
          'bool-and',
          'bool-or',
          'bool-xor',
          'uint8-variable',
          'uint8-variable-constant',
          'uint8-variable-uint8-value',
          'uint8-variable-int8-value',
          'uint8-variable-uint16-value',
          'uint8-variable-int16-value',
          'uint8-variable-uint32-value',
          'uint8-variable-int32-value',
          'uint8-variable-uint64-value',
          'uint8-variable-int64-value',
          'int8-variable',
          'int8-variable-constant-min',
          'int8-variable-constant-max',
          'int8-variable-uint8-value',
          'int8-variable-int8-value',
          'int8-variable-uint16-value',
          'int8-variable-int16-value',
          'int8-variable-uint32-value',
          'int8-variable-int32-value',
          'int8-variable-uint64-value',
          'int8-variable-int64-value',
          'uint16-variable',
          'uint16-variable-constant',
          'uint16-variable-uint8-value',
          'uint16-variable-int8-value',
          'uint16-variable-uint16-value',
          'uint16-variable-int16-value',
          'uint16-variable-uint32-value',
          'uint16-variable-int32-value',
          'uint16-variable-uint64-value',
          'uint16-variable-int64-value',
          'int16-variable',
          'int16-variable-constant-min',
          'int16-variable-constant-max',
          'int16-variable-uint8-value',
          'int16-variable-int8-value',
          'int16-variable-uint16-value',
          'int16-variable-int16-value',
          'int16-variable-uint32-value',
          'int16-variable-int32-value',
          'int16-variable-uint64-value',
          'int16-variable-int64-value',
          'uint32-variable',
          'uint32-variable-constant',
          'uint32-variable-uint8-value',
          'uint32-variable-int8-value',
          'uint32-variable-uint16-value',
          'uint32-variable-int16-value',
          'uint32-variable-uint32-value',
          'uint32-variable-int32-value',
          'uint32-variable-uint64-value',
          'uint32-variable-int64-value',
          'int32-variable',
          'int32-variable-constant-min',
          'int32-variable-constant-max',
          'int32-variable-uint8-value',
          'int32-variable-int8-value',
          'int32-variable-uint16-value',
          'int32-variable-int16-value',
          'int32-variable-uint32-value',
          'int32-variable-int32-value',
          'int32-variable-uint64-value',
          'int32-variable-int64-value',
          'uint64-variable',
          'uint64-variable-constant',
          'uint64-variable-uint8-value',
          'uint64-variable-int8-value',
          'uint64-variable-uint16-value',
          'uint64-variable-int16-value',
          'uint64-variable-uint32-value',
          'uint64-variable-int32-value',
          'uint64-variable-uint64-value',
          'uint64-variable-int64-value',
          'int64-variable',
          'int64-variable-constant-min',
          'int64-variable-constant-max',
          'int64-variable-uint8-value',
          'int64-variable-int8-value',
          'int64-variable-uint16-value',
          'int64-variable-int16-value',
          'int64-variable-uint32-value',
          'int64-variable-int32-value',
          'int64-variable-uint64-value',
          'int64-variable-int64-value',
          'utf8-variable',
          'utf8-variable-constant',
          'utf8-constant-single-quotes',
          'utf8-constant-double-quotes',
          'utf8-constant-escape-backslash',
          'utf8-constant-escape-single-quote',
          'utf8-constant-escape-double-quote',
          'utf8-constant-escape-tab',
          'utf8-constant-escape-line-feed',
          'utf8-constant-escape-carriage-return',
          'utf8-constant-escape-hex',
          'utf8-constant-escape-unicode',
          'unknown-variable',
          'unknown-variable-constant',
          'add',
          'subtract',
          'multiply',
          'utf8-add',
          'if-true',
          'if-false',
          'if-true-else',
          'if-false-else',
          'while',
          'function-call',
          'function-return-bool-constant',
          'function-return-bool-parameter',
          'function-return-uint8-constant',
          'function-return-uint8-parameter',
          'function-return-uint16-constant',
          'function-return-uint16-parameter',
          'function-return-uint32-constant',
          'function-return-uint32-parameter',
          'function-return-uint64-constant',
          'function-return-uint64-parameter',
          'function-return-utf8-constant',
          'function-return-utf8-parameter',
          'assert-true',
          'assert-false',
        ]
foreach test : tests
  test (test, test_runner, args : [ elf.full_path (), '@0@/tests/@1@.elf'.format (meson.current_source_dir (), test) ])
endforeach
